[project]
name = "openenv-sre-engine"
version = "0.1.0"
description = "SRE Incident Simulator for OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.sdist]
include = ["server"]